deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: secure-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: gcr.io/sharky1/app1:latest
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: secure-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: gcr.io/sharky1/app2:latest
        ports:
        - containerPort: 8080
